Adding endpoint to support vehicle identification
