# server/api/controllers/trips/router.ts
@@ -6,4 +6,5 @@ export default express.Router()
   .get('/:id', controller.byId)
   .delete('/:id', controller.cancel)
   .put('/:id/note', controller.setNote)
-  .put('/:id/vibe', controller.setVibe);
+  .put('/:id/vibe', controller.setVibe)
+  .post('/:id/vehicle/identification-request', controller.requestIdentification);
